fix(theme): Handle onload flickering (#173)
* Move PageWidth from theme to layout
* Move ContentComponent layout styling to root

--- a/src/components/content/content-component.st.css
+++ b/src/components/content/content-component.st.css
@@ -22,6 +22,20 @@
 	));
 }
 
+.root:type(section),
+.root:type(blockquote) {
+  margin-bottom: 1.8rem;
+}
+
+.root:type(paragraph),
+.root:type(blockquote) {
+  line-height: 1.8rem;
+}
+
+.root:type(blockquote) {
+  padding: 0 1.8rem;
+}
+
 .error {
 	background: red;
 	color: #fff;
